--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^2.26.0",
     "cors": "^2.8.5",
     "express": "^4.17.1"
   },
@@ -12,6 +13,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "prisma": "^2.26.0",
     "ts-node-dev": "^1.1.8"
   }
 }
