--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "@prisma/client": "^2.26.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1"
   },
   "scripts": {
     "start": "tsnd --ignore node_modules --transpile-only --no-notify --respawn src/server.ts"
