--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,6 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^2.26.0",
+    "auto-bind": "^4.0.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1"
@@ -13,6 +15,7 @@
     "start": "tsnd --ignore node_modules --transpile-only --no-notify --respawn src/server.ts"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "prisma": "^2.26.0",
     "ts-node-dev": "^1.1.8"
