--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,8 +8,10 @@
     "auto-bind": "^4.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dayjs": "^1.10.6",
     "express": "^4.17.1",
-    "express-async-errors": "^3.1.1"
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1"
   },
   "scripts": {
     "start": "tsnd --ignore node_modules --transpile-only --no-notify --respawn src/server.ts"
@@ -17,6 +19,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.4",
     "prisma": "^2.26.0",
     "ts-node-dev": "^1.1.8"
   }
