--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dev-challenge/server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/server.js",
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^2.26.0",
@@ -14,7 +14,9 @@
     "jsonwebtoken": "^8.5.1"
   },
   "scripts": {
-    "start": "tsnd --ignore node_modules --transpile-only --no-notify --respawn src/server.ts"
+    "dev": "tsnd --ignore node_modules --transpile-only --no-notify --respawn src/server.ts",
+    "start": "node dist/server.js",
+    "build": "tsc"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
