--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -2,5 +2,9 @@
   "extends": "../../tsconfig.json",
   "include": [
     "./src/**/*"
-  ]
+  ],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "outDir": "dist"
+  }
 }
