--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es2017",
     "module": "commonjs",
-    "noEmit": true,
+    "outDir": "dist",
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
