--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -7,6 +7,10 @@
     "start": "webpack serve --mode development"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.6.5",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "framer-motion": "^4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -17,6 +21,7 @@
     "@babel/preset-typescript": "^7.14.5",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@types/react": "^17.0.13",
+    "@types/react-dom": "^17.0.9",
     "babel-loader": "^8.2.2",
     "html-webpack-plugin": "^5.3.2",
     "react-refresh": "^0.10.0",
