--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,7 +12,8 @@
     "@emotion/styled": "^11",
     "framer-motion": "^4",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
