--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,7 +13,8 @@
     "framer-motion": "^4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -23,6 +24,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.8",
     "babel-loader": "^8.2.2",
     "html-webpack-plugin": "^5.3.2",
     "react-refresh": "^0.10.0",
