--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -7,7 +7,10 @@
     "start": "webpack serve --mode development"
   },
   "dependencies": {
+    "@babel/runtime": "^7.14.6",
     "@chakra-ui/react": "^1.6.5",
+    "@dev-challenge/dto": "*",
+    "@dev-challenge/entities": "*",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "axios": "^0.21.1",
@@ -19,10 +22,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@types/js-cookie": "^2.2.7",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
