--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.14.6",
+    "@chakra-ui/icons": "^1.0.15",
     "@chakra-ui/react": "^1.6.5",
     "@dev-challenge/dto": "*",
     "@dev-challenge/entities": "*",
