--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "webpack serve --mode development"
+    "start": "webpack serve --mode development",
+    "build": "cross-env NODE_ENV=production webpack"
   },
   "dependencies": {
     "@babel/runtime": "^7.14.6",
@@ -35,6 +36,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
     "babel-loader": "^8.2.2",
+    "cross-env": "^7.0.3",
     "html-webpack-plugin": "^5.3.2",
     "react-refresh": "^0.10.0",
     "webpack": "^5.43.0",
